# pkg/rest/docs/MediaserverAPI_swagger.json
@@ -16,7 +16,7 @@
         "version": "1.0"
     },
     "paths": {
-        "/actions": {
+        "/{domain}/actions": {
             "get": {
                 "security": [
                     {
@@ -32,6 +32,15 @@
                 ],
                 "summary": "get actions with their parameters",
                 "operationId": "get-actions",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -48,7 +57,7 @@
                 }
             }
         },
-        "/cache/{collection}/{signature}": {
+        "/{domain}/cache/{collection}/{signature}": {
             "delete": {
                 "security": [
                     {
@@ -65,6 +74,13 @@
                 "summary": "delete item caches metadata and media",
                 "operationId": "delete-item-caches-metadata-media",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "collection name",
@@ -102,7 +118,7 @@
                 }
             }
         },
-        "/cache/{collection}/{signature}/{action}/{params}": {
+        "/{domain}/cache/{collection}/{signature}/{action}/{params}": {
             "get": {
                 "security": [
                     {
@@ -119,6 +135,13 @@
                 "summary": "get cache metadata",
                 "operationId": "get-collection-signature-action-params-cache",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "collection name",
@@ -198,6 +221,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "collection name",
                         "name": "collection",
                         "in": "path",
@@ -246,7 +276,7 @@
                 }
             }
         },
-        "/collection": {
+        "/{domain}/collection": {
             "get": {
                 "security": [
                     {
@@ -262,6 +292,15 @@
                 ],
                 "summary": "gets collections data",
                 "operationId": "get-collections",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -299,7 +338,7 @@
                 }
             }
         },
-        "/collection/{collection}": {
+        "/{domain}/collection/{collection}": {
             "get": {
                 "security": [
                     {
@@ -316,6 +355,13 @@
                 "summary": "gets collection data",
                 "operationId": "get-collection-by-name",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "collection name",
@@ -358,7 +404,7 @@
                 }
             }
         },
-        "/ingest": {
+        "/{domain}/ingest": {
             "get": {
                 "security": [
                     {
@@ -374,6 +420,15 @@
                 ],
                 "summary": "next ingest item",
                 "operationId": "get-ingest-item",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -408,7 +463,7 @@
                 }
             }
         },
-        "/ingest/derivate": {
+        "/{domain}/ingest/derivate": {
             "post": {
                 "security": [
                     {
@@ -425,6 +480,13 @@
                 "summary": "next derivate ingest item",
                 "operationId": "get-derivate-ingest-item",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "description": "data type and suffixes",
                         "name": "type",
@@ -469,7 +531,7 @@
                 }
             }
         },
-        "/item/{collection}": {
+        "/{domain}/item/{collection}": {
             "put": {
                 "security": [
                     {
@@ -486,6 +548,13 @@
                 "summary": "creates new item",
                 "operationId": "put-item-collection",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "collection name",
@@ -537,7 +606,7 @@
                 }
             }
         },
-        "/item/{collection}/{signature}": {
+        "/{domain}/item/{collection}/{signature}": {
             "get": {
                 "security": [
                     {
@@ -554,6 +623,13 @@
                 "summary": "get item metadata",
                 "operationId": "get-item-metadata",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "collection name",
@@ -608,6 +684,13 @@
                 "parameters": [
                     {
                         "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
                         "description": "collection name",
                         "name": "collection",
                         "in": "path",
@@ -643,7 +726,7 @@
                 }
             }
         },
-        "/ping": {
+        "/{domain}/ping": {
             "get": {
                 "description": "for testing if server is running",
                 "produces": [
@@ -654,6 +737,15 @@
                 ],
                 "summary": "does pong",
                 "operationId": "get-ping",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -664,7 +756,7 @@
                 }
             }
         },
-        "/storage/{storageid}": {
+        "/{domain}/storage/{storageid}": {
             "get": {
                 "security": [
                     {
@@ -681,6 +773,13 @@
                 "summary": "gets storage data",
                 "operationId": "get-storage-by-id",
                 "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "path",
+                        "required": true
+                    },
                     {
                         "type": "string",
                         "description": "storage id",
